<resources>
    <string name="app_name">味库</string>
    <string name="app_navigation_main">首页</string>
    <string name="app_navigation_kitchen">厨房</string>
    <string name="app_navigation_my">我</string>
    <string name="app_exit_toast">再按一次退出味库</string>
    <string name="app_my_click_to_login">点击登录</string>
    <string name="app_setting_about_sina">新浪微博@味库</string>
    <string name="app_setting_about_weixin">微信公众号：味库</string>
    <string name="app_slogan">会做菜 更懂爱</string>
    <string name="app_food_load_more">更多菜谱</string>
    <string name="app_food_action_do">上传菜谱</string>
    <string name="app_recommend_default_tag_staple">主食</string>
    <string name="app_recommend_default_tag_western">西餐</string>
    <string name="app_recommend_default_tag_children">儿童</string>
    <string name="app_recommend_default_tag_rightnow">当季</string>
    <string name="app_recommend_default_tag_more">更多</string>
    <string name="app_recommend_feature_dish">去买菜</string>
    <string name="app_recommend_feature_garnish">下厨房</string>
    <string name="app_recommend_feature_cookshow">晒厨艺</string>
    <string name="app_recommend_feature_publish">传菜谱</string>
    <string name="app_label_write_comment">写评论</string>
    <string name="app_label_upload_food">晒厨艺</string>
    <string name="app_home_item_message">我的消息</string>
    <string name="app_home_item_fav">我的收藏</string>
    <string name="app_home_item_upload">我的厨艺</string>
    <string name="app_home_item_recipe">我的菜谱</string>
    <string name="app_home_item_coupon">我的优惠码</string>
    <string name="app_home_item_order">全部订单</string>
    <string name="app_home_item_call">客服电话</string>
    <string name="app_home_item_wallet">我的钱包</string>
    <string name="app_home_item_gain_coupon">获得优惠</string>
    <string name="app_home_item_recipe_draft">草稿箱</string>
    <string name="app_home_item_order_obligation">待付款</string>
    <string name="app_home_item_order_no_deliver">待收货</string>
    <string name="app_home_item_order_no_evaluate">待评价</string>
    <string name="app_home_item_order_refund">退款</string>
    <string name="app_kitchen_home_item_ingredient">食材</string>
    <string name="app_kitchen_home_item_condiment">调料</string>
    <string name="app_kitchen_home_item_wave">厨具</string>
    <string name="app_kitchen_home_item_barcode">扫码</string>
    <string name="app_account_bind_item_weixin">绑定微信</string>
    <string name="app_account_bind_item_qq">绑定QQ</string>
    <string name="app_account_bind_item_weibo">绑定新浪微博</string>
    <string name="app_account_bind_login_success">登录成功！手机已绑定</string>
    <string name="app_setting_item_update_pwd">修改手机登录密码</string>
    <string name="app_setting_item_binded_phone">已绑定手机号 %1$3s</string>
    <string name="app_setting_item_unbind_phone">未绑定手机账号</string>
    <string name="app_setting_item_bind_phone">账号绑定</string>
    <string name="app_setting_item_share_app">把味库分享给小伙伴</string>
    <string name="app_setting_item_feedback">帮助和建议</string>
    <string name="app_setting_item_yummy">给味库君点个赞</string>
    <string name="app_setting_item_clear_cache">清除缓存</string>
    <string name="app_setting_item_push">推送消息</string>
    <string name="app_setting_item_about">关于味库</string>
    <string name="app_setting_item_address">常用地址</string>
    <string name="app_setting_item_check_upd">检查更新</string>
    <string name="app_setting_item_provisions">法律条款</string>
    <string name="app_setting_item_login_state">正在使用%1$s登录</string>
    <string name="app_setting_item_binded_phone_sub">更换</string>
    <string name="app_home_coupon_rule">*优惠码使用细则</string>
    <string name="app_title_my_setting">设置</string>
    <string name="app_title_my_coupon">分享优惠</string>
    <string name="app_title_my_favorite">我的收藏</string>
    <string name="app_title_cook_show">晒过的厨艺</string>
    <string name="app_title_cook_show_food">晒厨艺 — %1$s</string>
    <string name="app_title_cook_show_list">晒厨艺</string>
    <string name="app_about">关于我们</string>
    <string name="app_title_about">关于味库</string>
    <string name="app_about_trading">交易条款</string>
    <string name="app_about_protocol">隐私条款</string>
    <string name="app_about_server">服务使用协议</string>
    <string name="app_collecting_server">代收协议</string>
    <string name="app_favorite_tag_article">文章</string>
    <string name="app_favorite_tag_activity">活动</string>
    <string name="app_favorite_tag_food">菜谱</string>
    <string name="app_want_join_party">%s人想参加</string>
    <string name="app_title_topic">吃货新鲜事</string>
    <string name="app_title_party">吃货去哪儿</string>
    <string name="app_label_like">我感兴趣</string>
    <string name="app_comment_send">发送</string>
    <string name="app_comment_hint">发表评论…</string>
    <string name="app_comment_hint_input">说两句呗（120字以内）</string>
    <string name="app_search_hint">搜索菜谱</string>
    <string name="app_category_index_name"> %1$s </string>
    <string name="app_button_register">注册</string>
    <string name="app_bind">绑定</string>
    <string name="app_bind_phone">绑定手机号</string>
    <string name="app_bind_new_phone">绑定新手机</string>
    <string name="app_bind_account">账号绑定</string>
    <string name="app_bind_tip">绑定手机后，账号更安全！</string>
    <string name="app_bind_new_phone_hint_num">输入要绑定的手机号</string>
    <string name="app_bind_new_phone_hint_code">收到的验证码</string>
    <string name="app_login_title"> 登录 </string>
    <string name="app_login_last_state_label">上次使用</string>
    <string name="app_login_last_state">%1$s账号登录</string>
    <string name="app_login_register">注册新账号</string>
    <string name="app_login_phone_rapid">手机快捷登录</string>
    <string name="app_button_rapidregister">注册</string>
    <string name="app_rapid_title">快速登录</string>
    <string name="app_login_account_name_hint">手机号/邮箱</string>
    <string name="app_rapidlogin_account_name_hint">正在使用的手机号</string>
    <string name="app_rapid_login_account_name_hint">手机号</string>
    <string name="app_rapid_login_auth_code">验证码</string>
    <string name="app_verify_phone">验证</string>
    <string name="app_login_account_pwd_hint">密码</string>
    <string name="app_rapidlogin_account_codehint">收到的验证码</string>
    <string name="app_rapidlogin_obtain_code">获取验证码</string>
    <string name="app_login_third_div">第三方登录</string>
    <string name="app_rapidlogin_otherway">其他登录方式</string>
    <string name="app_login_third_weibo">微博</string>
    <string name="app_login_third_email">邮箱</string>
    <string name="app_login_third_phone">手机</string>
    <string name="app_login_third_phone_rapid">手机快捷</string>
    <string name="app_login_third_qq">QQ</string>
    <string name="app_login_third_wexin">微信</string>
    <string name="app_login_turnto_rapidlogin">其他登录方式</string>
    <string name="app_login_account_verity_hint">验证码</string>
    <string name="app_register_account_name_hint_email">请填写您的邮箱</string>
    <string name="app_register_account_password_hint">密码（6位以上数字或字母）</string>
    <string name="app_register_account_nickname_hint">昵称</string>
    <string name="app_register_account_password_tip">6–10位英文或数字</string>
    <string name="app_register_tab_phone">手机注册</string>
    <string name="app_register_tab_email">邮箱</string>
    <string name="app_button_title_register_and_login">注册并登录</string>
    <string name="app_button_title_login">登录</string>
    <string name="app_button_title_next">下一步</string>
    <string name="app_button_title_finish">完成</string>
    <string name="app_button_title_waiting">等待结果</string>
    <string name="app_register_account_name_hint_phone">手机号</string>
    <string name="app_register_account_verity_hint">验证码</string>
    <string name="app_register_server">注册即视为您已同意</string>
    <string name="app_register_phone_get_verity">获取验证码</string>
    <string name="app_my_waiting_verity_time">%1$s秒后重新获取</string>
    <string name="app_verify_phone_title1">安全验证</string>
    <string name="app_verify_phone_title_next">》</string>
    <string name="app_verify_phone_title2">绑定新手机</string>
    <string name="app_verify_phone_bottom_tip">收不到验证码？手机号验证》</string>
    <string name="app_verify_phone_top_tip">手机号验证</string>
    <string name="app_verify_phone_hint_code">收到的验证码</string>
    <string name="app_verify_phone_hint_num">请输入您绑定的手机号</string>
    <string name="app_error_phone_format">手机号格式错误</string>
    <string name="app_error_account_format">账号格式错误</string>
    <string name="app_error_verify_phone">您输入的手机号有误,还有%1$s次机会</string>
    <string name="app_error_verify_phone_max_count">已连续5次输入错误，请次日再试</string>
    <string name="app_error_phone_null">手机号不能为空</string>
    <string name="app_error_pswd_null">密码不能为空</string>
    <string name="app_error_verity_null">验证码不能为空</string>
    <string name="app_error_account_name_format">用户名为手机号</string>
    <string name="app_error_pwd_format">密码为6位以上数字或字母</string>
    <string name="app_error_pwd_verify">两次密码输入不一致</string>
    <string name="app_error_email_format">邮箱格式有误</string>
    <string name="app_error_bind">绑定失败</string>
    <string name="app_error_unbind">解绑失败</string>
    <string name="app_error_net">网络错误</string>
    <string name="app_title_register">注册</string>
    <string name="app_mcbs_hot_set_meal">热门套餐</string>
    <string name="app_tip_register_success">注册成功</string>
    <string name="app_tip_login_success">登录成功</string>
    <string name="app_title_find_password">找回密码</string>
    <string name="app_forget_label_input_account">账号</string>
    <string name="app_forget_hint_input_account">请输入您注册的邮箱或手机号</string>
    <string name="app_forget_label_check_verity_code">验证码</string>
    <string name="app_forget_tip">已发送至%1$s</string>
    <string name="app_forget_hint_check_verity_code">验证码</string>
    <string name="app_forget_label_new_pwd">重置密码</string>
    <string name="app_error_no_reason">未知错误</string>
    <string name="app_error_network">当前网络不可用</string>
    <string name="app_tip_reset_success">密码重置成功</string>
    <string name="app_title_bar_edit">编辑</string>
    <string name="app_title_bar_save">保存</string>
    <string name="app_title_user_profile">账户信息</string>
    <string name="app_user_profile_label_nickname">昵称</string>
    <string name="app_user_profile_label_birthday">生日</string>
    <string name="app_user_profile_label_gender">性别</string>
    <string name="app_user_profile_label_city">城市</string>
    <string name="app_button_logout">退出当前登录</string>
    <string name="app_gender_girl">女</string>
    <string name="app_gender_boy">男</string>
    <string name="app_tip_update_success">信息更新成功</string>
    <string name="app_tip_copy_success">复制\"%1$s\"成功</string>
    <string name="app_context_menu_title_more">更多操作</string>
    <string name="app_context_menu_title_delete">删除操作</string>
    <string name="app_context_menu_remove">删除</string>
    <string name="app_context_menu_edit">编辑</string>
    <string name="app_context_menu_review">预览</string>
    <string name="app_title_input_comment">写评论</string>
    <string name="app_title_replay_comment">回复评论</string>
    <string name="app_error_comment_empty">评论内容不能为空</string>
    <string name="app_error_comment_too_long">评论内容只能120个字</string>
    <string name="app_tip_comment_success">评论成功</string>
    <string name="app_error_comment_sending">评论正在发送中…</string>
    <string name="app_title_category">分类</string>
    <string name="app_button_search">搜索</string>
    <string name="app_label_history_search">历史搜索</string>
    <string name="app_label_hot_search">热门搜索</string>
    <string name="app_tip_clear_cache_ing">清理缓存中</string>
    <string name="app_tip_clear_cache_finish">清理完成</string>
    <string name="app_share_app_content">我用完这个软件后，觉得超赞，你也快去下载试试：http://www.wecook.cn</string>
    <string name="app_kitchen_tip">选择想吃的食材\n味小库帮你生成菜谱</string>
    <string name="app_kitchen_garnish">开始选菜</string>
    <string name="app_title_kitchen">厨房</string>
    <string name="app_button_title_myfoods">我的食材</string>
    <string name="app_platform_wechat">微信</string>
    <string name="app_button_title_back">返回</string>
    <string name="app_button_title_publish">发布</string>
    <string name="app_title_preview">预览</string>
</resources>