<?xml version="1.0" encoding="utf-8"?><!--快速登录界面的展示-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/uikit_grey"
    android:orientation="vertical">

    <include layout="@layout/uikit_view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/uikit_white"
        android:gravity="center">

        <TextView
            style="@style/UIKit.Font.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:text="@string/app_verify_phone_title1"
            android:textColor="@color/uikit_font_orange" />

        <TextView
            style="@style/UIKit.Font.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:gravity="center"
            android:text="@string/app_verify_phone_title_next"
            android:textColor="@color/uikit_font_dark_light" />

        <TextView
            style="@style/UIKit.Font.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:text="@string/app_verify_phone_title2"
            android:textColor="@color/uikit_font_dark_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/app_my_rapid_login_padding">

        <TextView
            android:id="@+id/app_verify_phone_top_tip"
            style="@style/UIKit.Font.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:gravity="center"
            android:text="@string/app_verify_phone_top_tip"
            android:visibility="visible"
            android:textColor="@color/uikit_font_dark_light" />

        <RelativeLayout
            android:id="@+id/app_verify_phone_input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/uikit_default_margin"
            android:background="@drawable/uikit_shape_rect_side_small_corners_grey">

            <TextView
                android:id="@+id/app_verify_phone_num"
                style="@style/UIKit.Font.Dark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_user_input_height"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/uikit_default_padding"
                android:textColorHint="@color/uikit_font_grep_light" />

            <View
                android:id="@+id/app_verify_phone_div"
                style="@style/UIKit.Line.Horizontal"
                android:layout_below="@id/app_verify_phone_num" />

            <EditText
                android:id="@+id/app_verify_phone_code"
                style="@style/UIKit.Font.Dark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_user_input_height"
                android:layout_below="@id/app_verify_phone_num"
                android:background="@null"
                android:hint="@string/app_verify_phone_hint_num"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingLeft="@dimen/uikit_default_padding"
                android:textColorHint="@color/uikit_font_grep_light" />

            <TextView
                android:id="@+id/app_verify_phone_obtain_authcode"
                style="@style/UIKit.Font.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/app_verify_phone_code"
                android:layout_alignRight="@id/app_verify_phone_code"
                android:layout_alignTop="@id/app_verify_phone_code"
                android:layout_marginBottom="@dimen/uikit_default_margin"
                android:layout_marginRight="@dimen/uikit_default_padding"
                android:layout_marginTop="@dimen/uikit_default_margin"
                android:background="@drawable/app_bt_bg_orange_white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/uikit_default_padding"
                android:paddingRight="@dimen/uikit_default_padding"
                android:text="@string/app_rapidlogin_obtain_code"
                android:visibility="gone"
                android:textColor="@color/uikit_bt_white_orange_font" />

            <com.wecook.uikit.widget.CoveredImageView
                android:id="@+id/app_verify_phone_code_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/app_verify_phone_code"
                android:layout_alignTop="@id/app_verify_phone_code"
                android:layout_alignRight="@id/app_verify_phone_code"
                android:paddingLeft="@dimen/uikit_default_padding"
                android:paddingRight="@dimen/uikit_default_padding"
                android:src="@drawable/uikit_ic_clear"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/app_verify_phone_button_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_user_button_height"
            android:layout_marginBottom="@dimen/app_login_button_margin"
            android:layout_marginTop="@dimen/app_login_button_margin"
            android:background="@drawable/app_bt_bg_orange_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_verify_phone_button_do"
                style="@style/UIKit.Font.Big"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/app_verify_phone"
                android:textColor="@color/uikit_bt_white_orange_font" />

            <com.wecook.uikit.widget.progressbar.CircularProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/app_verify_phone_waiting"
                android:layout_width="@dimen/app_loading_width"
                android:layout_height="@dimen/app_loading_width"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                app:cpb_color="@color/uikit_white"
                app:cpb_stroke_width="2dp" />
        </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/app_verify_phone_bottom_tip"-->
            <!--style="@style/UIKit.Font.Small"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:duplicateParentState="true"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/app_verify_phone_bottom_tip"-->
            <!--android:textColor="@color/uikit_font_dark_light" />-->

    </LinearLayout>
</LinearLayout>
