<?xml version="1.0" encoding="utf-8"?>

<!--
    *****NAME_RULES*****   
==============================================
drawable:
    {group _ type _ name _ [state] _ [suffix]}
==============================================
id:
    {group _ ui _ type _ [local] _ name}
==============================================
layout:
    {[group] _ ui _ name}
==============================================
menu:
    {[group] _ ui _ name}
==============================================
anim:
    {group _ name _ [local]}
==============================================
string:
    {group _ [ui] _ name}
==============================================
dimen:
    {group _ name _ property _ [size]}
==============================================
**********************************************
group:
    [common|uikit|sdk|app]

ui:
    [main|kitchen|home|activity|fragment|view|actionbar|...]

type:
    [bg(background)|ic(icon)|bt(button(必须有状态))|txt(textfield)
    |list(listview)|menu(menuitem)|radio(radiobutton)|checkbox|...]

local:
    [top|head|bottom|left|right|in|out|rotate|...]

property:
    [font|padding|margin|height|width|...]

size:
    [large|big|normal|small|double|treble|...]

state:
    [normal|pressed|disabled|on|off|...]

suffix:
    [light|dark|...]
==============================================
**********************************************
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/uikit_grey_light">

    <!-- 功能 选项-->
    <LinearLayout
        android:id="@+id/app_food_feature_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/uikit_white">

        <TextView
            android:id="@+id/app_recommend_feature_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/app_ic_feature_default"
            android:drawablePadding="@dimen/app_food_head_tag_font_padding"
            style="@style/UIKit.Font"
            android:text="@string/app_recommend_feature_dish"/>

        <View
            android:id="@+id/app_recommend_feature_sell_line"
            style="@style/UIKit.Line.Vertical.Light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/app_recommend_feature_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/app_ic_feature_default"
            android:drawablePadding="@dimen/app_food_head_tag_font_padding"
            android:text="@string/app_recommend_feature_garnish"
            style="@style/UIKit.Font" />

        <View style="@style/UIKit.Line.Vertical.Light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/app_recommend_feature_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/app_ic_feature_default"
            android:drawablePadding="@dimen/app_food_head_tag_font_padding"
            style="@style/UIKit.Font"
            android:text="@string/app_recommend_feature_cookshow"/>

        <View style="@style/UIKit.Line.Vertical.Light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/app_recommend_feature_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/app_ic_feature_default"
            android:drawablePadding="@dimen/app_food_head_tag_font_padding"
            style="@style/UIKit.Font"
            android:text="@string/app_recommend_feature_publish"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/uikit_default_padding" />

</LinearLayout>