<?xml version="1.0" encoding="utf-8"?>

<!--
    *****NAME_RULES*****   
==============================================
drawable:
    {group _ type _ name _ [state] _ [suffix]}
==============================================
id:
    {group _ ui _ type _ [local] _ name}
==============================================
layout:
    {[group] _ ui _ name}
==============================================
menu:
    {[group] _ ui _ name}
==============================================
anim:
    {group _ name _ [local]}
==============================================
string:
    {group _ [ui] _ name}
==============================================
dimen:
    {group _ name _ property _ [size]}
==============================================
**********************************************
group:
    [common|uikit|sdk|app]

ui:
    [main|kitchen|home|activity|fragment|view|actionbar|...]

type:
    [bg(background)|ic(icon)|bt(button(必须有状态))|txt(textfield)
    |list(listview)|menu(menuitem)|radio(radiobutton)|checkbox|...]

local:
    [top|head|bottom|left|right|in|out|rotate|...]

property:
    [font|padding|margin|height|width|...]

size:
    [large|big|normal|small|double|treble|...]

state:
    [normal|pressed|disabled|on|off|...]

suffix:
    [light|dark|...]
==============================================
**********************************************
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uikit_white">

    <RelativeLayout
        android:id="@+id/app_cook_camera_title_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uikit_action_bar_default_height"
        android:layout_gravity="top">

        <TextView
            style="@style/UIKit.Font.Big.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_preview"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/app_cook_camera_preview"
        android:layout_below="@id/app_cook_camera_title_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/app_cook_camera_bottom_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uikit_action_bar_default_height"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/app_cook_camera_redo"
            style="@style/UIKit.Font.Big"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/uikit_bt_orange_white_font"
            android:text="@string/app_button_title_back"
            android:background="@drawable/app_bt_background_grep_light" />

        <View style="@style/UIKit.Line.Vertical" />

        <TextView
            android:id="@+id/app_cook_camera_publish"
            style="@style/UIKit.Font.Big"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/uikit_bt_orange_white_font"
            android:text="@string/app_button_title_publish"
            android:background="@drawable/app_bt_background_grep_light" />

    </LinearLayout>

    <View
        style="@style/UIKit.Line.Horizontal"
        android:layout_above="@id/app_cook_camera_bottom_group" />
</RelativeLayout>